--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <body>
 
 <header>
-    <h1>Unity App</h1>
+    <h1>The Digital Faith Project</h1>
     <p>Faith and Guidance at Your Fingertips</p>
 </header>
 
@@ -80,13 +80,13 @@
 </nav>
 
 <section class="hero" id="home">
-    <h2>Welcome to Unity App</h2>
+    <h2>Welcome to the Faith Site</h2>
     <p>Bridging beliefs, inspiring faith, and uniting the world through technology.</p>
 </section>
 
 <section class="section" id="about">
     <h2>About Us</h2>
-    <p>Unity App is a revolutionary non-profit platform that empowers individuals worldwide with access to a virtual faith counselor. Our unique service is knowledgeable of all major religions and supports atheists and nature-based beliefs, ensuring inclusivity and universal access to spiritual guidance.</p>
+    <p>The digital fait project is a revolutionary non-profit platform that empowers individuals worldwide with access to a virtual faith counselor. Our unique service is knowledgeable of all major religions and supports atheists and nature-based beliefs, ensuring inclusivity and universal access to spiritual guidance.</p>
 </section>
 
 <section class="section" id="features">
@@ -106,7 +106,7 @@
 </section>
 
 <footer>
-    <p>Contact us at <a href="mailto:info@unityapp.org">info@unityapp.org</a></p>
+    <p>Contact us at <a href="mailto:faith@digitalfaithproject.org">faith@digitalfaithproject.org</a></p>
     <p>Follow us on <a href="#">Facebook</a> | <a href="#">Twitter</a> | <a href="#">Instagram</a></p>
 </footer>
 
