--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Unity App - Faith at Your Fingertips</title>
+    <title>The Digital Faith Project - Faith at Your Fingertips</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -38,7 +38,7 @@
         .hero {
             text-align: center;
             padding: 50px 20px;
-            background: url('https://via.placeholder.com/1920x400') no-repeat center center/cover;
+            background: url('Background.webp') no-repeat center center/cover;
             color: white;
         }
         .hero h2 {
