--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@
 </nav>
 
 <section class="hero" id="home">
-    <h2>Welcome to the Faith Site</h2>
+    <h2>Welcome to our site!</h2>
     <p>Bridging beliefs, inspiring faith, and uniting the world through technology.</p>
 </section>
 
 <section class="section" id="about">
     <h2>About Us</h2>
-    <p>The digital fait project is a revolutionary non-profit platform that empowers individuals worldwide with access to a virtual faith counselor. Our unique service is knowledgeable of all major religions and supports atheists and nature-based beliefs, ensuring inclusivity and universal access to spiritual guidance.</p>
+    <p>The digital faith project is a revolutionary non-profit platform that empowers individuals worldwide with access to a virtual faith counselor. Our unique service is knowledgeable of all major religions and supports atheists and nature-based beliefs, ensuring inclusivity and universal access to spiritual guidance.</p>
 </section>
 
 <section class="section" id="features">
